Carga inicial del ambiente

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/04/28 20:15:52 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/04/29 01:11:41 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x7faf0c7a76a0>\n"
+      "<pyspark.sql.session.SparkSession object at 0x7f3fb40d2370>\n"
      ]
     }
    ],
@@ -35,6 +35,14 @@
     "# Verifica que la sesión de Spark se haya creado\n",
     "print(spark)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b01ee1-800c-48cb-8978-74f4eb2a5cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
