Implementacion del Ejercicio 1. Creacion de la base de datos automatizada en docker y su documentacion

--- a/notebooks/Ejercicio 1.ipynb
+++ b/notebooks/Ejercicio 1.ipynb
@@ -1,9 +1,285 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "08469e47-b21a-451a-aabb-f50c6013923f",
+   "metadata": {},
+   "source": [
+    "Ejercicio 1: Diseño y construcción de esquema de base de datos. (4pts)\n",
+    "Descripción: Diseñar un esquema de base de datos para una aplicación de comercio electrónico para una empresa llamada MP3. Los clientes tendrán acceso a un catálogo de productos, y podrán realizar órdenes de compra con uno o varios artículos (Nombre, descripción y precio), el sistema no posee una pasarela de pago, para realizar el pago se deberá realizar desde cualquier corresponsal con el número de orden de compra.\n",
+    "\n",
+    "Requisitos:\n",
+    "- Crear diagrama entidad-relación (1p)\n",
+    "- Construir estructuras basado en el diagrama (1p)\n",
+    "- Incluir atributos relevantes como PK, FK, Nombres de clientes, detalle de productos, fecha de orden de compra (1p)\n",
+    "- Incluir datos de personas o productos con tildes, ñ, guión bajo, guión medio.\n",
+    "- Incluir valores decimales con 5 dígitos. (1p)\n",
+    "\n",
+    "Entregables:\n",
+    "Incluir dentro del proyecto:\n",
+    "- Diagrama entidad-relación\n",
+    "- Script SQL con los DLL de las estructuras y la insercción de los datos de prueba."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b5cc6d2-86e2-4e95-afe0-bcf4be39c4ea",
+   "metadata": {},
+   "source": [
+    "**NOTA IMPORTANTE:**\n",
+    "\n",
+    "Todo lo que esta realizado aqui, se ejecuta automaticamente cuando se levanta el contenedor, ya que todo esto esta en el archivo **init.sql**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dccb8da-7c8f-4819-8e1b-b5134f873195",
+   "metadata": {},
+   "source": [
+    "**1. Crear diagrama entidad-relación (1p)**\n",
+    "\n",
+    "   Entidades Identificadas:\n",
+    "   \n",
+    "        Clientes:\n",
+    "        - Atributos: ID_Cliente, Nombre, Email, Teléfono, Dirección, Fecha_Registro.\n",
+    "        Productos:\n",
+    "        - Atributos: ID_Producto, Nombre, Descripción, Precio, Stock.\n",
+    "        Órdenes:\n",
+    "        - Atributos: ID_Orden, ID_Cliente, Fecha_Orden, Total.\n",
+    "        Detalles de Órdenes:\n",
+    "        - Atributos: ID_Detalle, ID_Orden, ID_Producto, Cantidad, Precio_Unitario, Subtotal.\n",
+    "\n",
+    "    Relaciones:\n",
+    "   \n",
+    "        - Clientes ↔ Órdenes: Relación 1:N. Un cliente puede tener varias órdenes.\n",
+    "        - Órdenes ↔ Detalles de Órdenes: Relación 1:N. Una orden puede incluir múltiples detalles.\n",
+    "        - Productos ↔ Detalles de Órdenes: Relación 1:N. Un producto puede aparecer en múltiples detalles de órdenes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5505910c-f3ba-4600-8e21-99b0bed3b4fa",
+   "metadata": {},
+   "source": [
+    "![Texto alternativo](Diagrama-Entidad-Relacion.drawio.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "889b5528-e52b-4ce0-bbf8-975fd61c742d",
+   "metadata": {},
+   "source": [
+    "**2. Construir estructuras basado en el diagrama (1p)**\n",
+    "\n",
+    "**3. Incluir atributos relevantes como PK, FK, Nombres de clientes, detalle de productos, fecha de orden de compra (1p)**\n",
+    "\n",
+    "CREATE DATABASE mp3_db;\n",
+    "\\c mp3_db;\n",
+    "\n",
+    "**-- Eliminar las tablas si existen**\n",
+    "\n",
+    "DROP TABLE IF EXISTS Detalles_Orden CASCADE;\n",
+    "\n",
+    "DROP TABLE IF EXISTS Ordenes CASCADE;\n",
+    "\n",
+    "DROP TABLE IF EXISTS Productos CASCADE;\n",
+    "\n",
+    "DROP TABLE IF EXISTS Clientes CASCADE;\n",
+    "\n",
+    "**-- Tabla de Clientes**\n",
+    "\n",
+    " CREATE TABLE Clientes (\n",
+    " \n",
+    "    ID_Cliente SERIAL PRIMARY KEY,\n",
+    "    \n",
+    "    Nombre VARCHAR(100) NOT NULL,\n",
+    "    \n",
+    "    Email VARCHAR(100) UNIQUE NOT NULL,\n",
+    "    \n",
+    "    Telefono VARCHAR(15),\n",
+    "    \n",
+    "    Direccion TEXT,\n",
+    "    \n",
+    "    Fecha_Registro TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
+    ");\n",
+    "\n",
+    "**-- Tabla de Productos**\n",
+    "\n",
+    "CREATE TABLE Productos (\n",
+    "\n",
+    "    ID_Producto SERIAL PRIMARY KEY,\n",
+    "    \n",
+    "    Nombre VARCHAR(100) NOT NULL,\n",
+    "    \n",
+    "    Descripcion TEXT,\n",
+    "    \n",
+    "    Precio NUMERIC(10, 5) NOT NULL, -- Decimales con 5 dígitos\n",
+    "    \n",
+    "    Stock INT NOT NULL\n",
+    ");\n",
+    "\n",
+    "**-- Tabla de Órdenes**\n",
+    "\n",
+    "CREATE TABLE Ordenes (\n",
+    "\n",
+    "    ID_Orden SERIAL PRIMARY KEY,\n",
+    "    \n",
+    "    ID_Cliente INT REFERENCES Clientes(ID_Cliente),\n",
+    "    \n",
+    "    Fecha_Orden TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
+    "    \n",
+    "    Total NUMERIC(10, 5) NOT NULL\n",
+    ");\n",
+    "\n",
+    "**-- Tabla de Detalles de Órdenes**\n",
+    "\n",
+    "CREATE TABLE Detalles_Orden (\n",
+    "\n",
+    "    ID_Detalle SERIAL PRIMARY KEY,\n",
+    "    \n",
+    "    ID_Orden INT REFERENCES Ordenes(ID_Orden),\n",
+    "    \n",
+    "    ID_Producto INT REFERENCES Productos(ID_Producto),\n",
+    "    \n",
+    "    Cantidad INT NOT NULL,\n",
+    "    \n",
+    "    Precio_Unitario NUMERIC(10, 5) NOT NULL, -- Decimales con 5 dígitos\n",
+    "    \n",
+    "    Subtotal NUMERIC(10, 5) NOT NULL\n",
+    ");\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3335b4dd-dc12-4003-84a1-49e87146aa5b",
+   "metadata": {},
+   "source": [
+    "**4. Incluir datos de personas o productos con tildes, ñ, guión bajo, guión medio.**\n",
+    "\n",
+    "**5. Incluir valores decimales con 5 dígitos. (1p)**\n",
+    "\n",
+    "**--Datos de prueba en clientes.**\n",
+    "\n",
+    "INSERT INTO Clientes (Nombre, Email, Telefono, Direccion) VALUES\n",
+    "\n",
+    "('Andrés Pérez', 'andres_perez@gmail.com', '0987654321', 'Calle Olmedo 123'),\n",
+    "\n",
+    "('María-Luisa Ñáñez', 'maria_luisa@gmail.com', '0991234567', 'Av. América 45-67'),\n",
+    "\n",
+    "('Juan Rodríguez', 'juan.rodriguez@hotmail.com', '0987651234', 'Av. Quito 01-12'),\n",
+    "\n",
+    "('Carla Gómez', 'carla_gomez@yahoo.com', '0981234567', 'Calle Bolívar 45-78'),\n",
+    "\n",
+    "('José Martínez', 'jose.martinez@gmail.com', '0998765432', 'Calle Juan Montalvo 12-34'),\n",
+    "\n",
+    "('Ana-Lucia Ñiquiz', 'ana_niquiz@gmail.com', '0984321786', 'Calle del Sol 23-67'),\n",
+    "\n",
+    "('Luis Torres', 'luis.torres@gmail.com', '0997651234', 'Av. Loja 45-89'),\n",
+    "\n",
+    "('Mónica Fernández', 'monica_fernandez@gmail.com', '0986453210', 'Barrio Los Andes'),\n",
+    "\n",
+    "('Pedro García', 'pedro_garcia@yahoo.com', '0989876543', 'Calle Villavicencio'),\n",
+    "\n",
+    "('Gabriela Núñez', 'gabriela_nunez@hotmail.com', '0994321678', 'Calle Mercurio 67-45');\n",
+    "\n",
+    "\n",
+    "**--Datos de Prueba en productos**\n",
+    "\n",
+    "INSERT INTO Productos (Nombre, Descripcion, Precio, Stock) VALUES\n",
+    "\n",
+    "('Teléfono Xiaomi', 'Smartphone con pantalla AMOLED', 399.99000, 50),\n",
+    "\n",
+    "('Auriculares Ñ-tech', 'Auriculares con cancelación de ruido', 59.95000, 100),\n",
+    "\n",
+    "('Laptop HP', 'Computadora portátil con 16GB RAM', 999.00000, 25),\n",
+    "\n",
+    "('Teclado Mecánico', 'Teclado RGB retroiluminado', 75.50000, 80),\n",
+    "\n",
+    "('Monitor Samsung', 'Monitor LED 24 pulgadas', 180.45000, 30),\n",
+    "\n",
+    "('Mouse Gamer', 'Mouse óptico con DPI ajustable', 25.99000, 200),\n",
+    "\n",
+    "('Silla Ergonómica', 'Silla de oficina ajustable', 250.25000, 15),\n",
+    "\n",
+    "('Cable HDMI', 'Cable HDMI de 2 metros', 12.50000, 150),\n",
+    "\n",
+    "('Router Wi-Fi', 'Router de alta velocidad', 89.99000, 50),\n",
+    "\n",
+    "('Disco Duro Externo', 'Disco duro de 1TB', 120.75000, 45);\n",
+    "\n",
+    "\n",
+    "**--Datos de prueba en ordenes.**\n",
+    "\n",
+    "INSERT INTO Ordenes (ID_Cliente, Total) VALUES\n",
+    "\n",
+    "(1, 459.94000),\n",
+    "\n",
+    "(2, 119.90000),\n",
+    "\n",
+    "(3, 175.99000),\n",
+    "\n",
+    "(4, 1250.25000),\n",
+    "\n",
+    "(5, 89.99000),\n",
+    "\n",
+    "(6, 75.50000),\n",
+    "\n",
+    "(7, 220.45000),\n",
+    "\n",
+    "(8, 399.99000),\n",
+    "\n",
+    "(9, 180.45000),\n",
+    "\n",
+    "(10, 250.25000);\n",
+    "\n",
+    "\n",
+    "**--Datos de prueba en detalles orden.**\n",
+    "\n",
+    "INSERT INTO Detalles_Orden (ID_Orden, ID_Producto, Cantidad, Precio_Unitario, Subtotal) VALUES\n",
+    "\n",
+    "(1, 1, 1, 399.99000, 399.99000),\n",
+    "\n",
+    "(1, 2, 1, 59.95000, 59.95000),\n",
+    "\n",
+    "(2, 2, 2, 59.95000, 119.90000),\n",
+    "\n",
+    "(3, 3, 1, 999.00000, 999.00000),\n",
+    "\n",
+    "(3, 4, 1, 75.50000, 75.50000),\n",
+    "\n",
+    "(4, 5, 2, 180.45000, 360.90000),\n",
+    "\n",
+    "(5, 6, 4, 25.99000, 103.96000),\n",
+    "\n",
+    "(6, 7, 1, 250.25000, 250.25000),\n",
+    "\n",
+    "(7, 8, 2, 12.50000, 25.00000),\n",
+    "\n",
+    "(8, 9, 1, 89.99000, 89.99000);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4af6a5a8-c67a-45ac-84bb-46c988334d95",
+   "metadata": {},
+   "source": [
+    "**Justificación de Atributos y Relaciones**\n",
+    "\n",
+    "PK y FK:\n",
+    "- Cada tabla tiene una clave primaria (PRIMARY KEY) única.\n",
+    "- Las claves foráneas (FOREIGN KEY) aseguran la integridad referencial entre tablas.\n",
+    "\n",
+    "Atributos relevantes:\n",
+    "- Se incluye Fecha_Registro para los clientes y Fecha_Orden para las órdenes.\n",
+    "- Los nombres y descripciones permiten datos con caracteres especiales como tildes y ñ.\n",
+    "- Decimales con 5 dígitos:\n",
+    "- El tipo de dato NUMERIC(10, 5) asegura precisión en los precios y totales.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc64d34b-dd8b-4c8f-8a6a-c2aa13b722ec",
+   "id": "5c499dd4-cba4-4511-9f61-df08ee047bc6",
    "metadata": {},
    "outputs": [],
    "source": []
