--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,24 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "420f2b41-ee77-45bf-906f-209a49af2be1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/04/29 01:11:41 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x7f3fb40d2370>\n"
+      "<pyspark.sql.session.SparkSession object at 0x7f45694f78e0>\n"
      ]
     }
    ],
