--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x7f45694f78e0>\n"
+      "<pyspark.sql.session.SparkSession object at 0x7f1834f0b640>\n"
      ]
     }
    ],
