Actualizacion de los datos faltantes para realizacion del data where house

--- a/notebooks/Ejercicio 2.ipynb
+++ b/notebooks/Ejercicio 2.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "9cbc5c49-b25a-45cb-95c1-effc329b3fbe",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "9       Calle Mercurio 67-45 2025-04-29 17:08:02.812130  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,11 +236,18 @@
     "contrasena = 'postgres'  \n",
     "host = 'localhost'         \n",
     "puerto = '5432'           \n",
-    "bd = 'mp3_db'       \n",
+    "bd = 'mp3_db'   \n",
+    "\n",
+    "#Credenciales para el datawerehouse        \n",
+    "bd_dw = 'postgres'   \n",
+    "#\n",
+    "\n",
+    "conexion_dw = f'postgresql+psycopg2://{usuario}:{contrasena}@{host}:{puerto}/{bd_dw}'\n",
     "\n",
     "conexion = f'postgresql+psycopg2://{usuario}:{contrasena}@{host}:{puerto}/{bd}'\n",
     "\n",
     "engine = create_engine(conexion)\n",
+    "engine_dw=create_engine(conexion_dw)\n",
     "\n",
     "#Verificación de la conexión\n",
     "df_clientes = pd.read_sql('SELECT * FROM Clientes', engine)\n",
@@ -1346,6 +1353,73 @@
    "source": [
     "df_ordenes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c1d4d1d-bc69-44e3-8f21-7eb1c683b874",
+   "metadata": {},
+   "source": [
+    "## **Creación de la base de datos para el DatawereHouse**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bbeb8c76-2f7e-4c4b-85d8-8f1bca98e1be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with engine_dw.connect() as conn:\n",
+    "    conn.execute(text('DROP TABLE IF EXISTS fact_orden, dim_tiempo, dim_producto, dim_cliente CASCADE;'))\n",
+    "\n",
+    "    conn.execute(text('''\n",
+    "        CREATE TABLE dim_cliente (\n",
+    "            id_cliente INT PRIMARY KEY,\n",
+    "            nombre TEXT,\n",
+    "            email TEXT\n",
+    "        );\n",
+    "    '''))\n",
+    "\n",
+    "    conn.execute(text('''\n",
+    "        CREATE TABLE dim_producto (\n",
+    "            id_producto INT PRIMARY KEY,\n",
+    "            nombre varchar,\n",
+    "            descripcion TEXT,\n",
+    "            precio NUMERIC(10, 2)\n",
+    "        );\n",
+    "    '''))\n",
+    "\n",
+    "    conn.execute(text('''\n",
+    "        CREATE TABLE dim_tiempo (\n",
+    "            id_tiempo SERIAL PRIMARY KEY,\n",
+    "            fecha DATE,\n",
+    "            anio INT,\n",
+    "            mes INT,\n",
+    "            dia INT\n",
+    "        );\n",
+    "    '''))\n",
+    "\n",
+    "    conn.execute(text('''\n",
+    "        CREATE TABLE fact_orden (\n",
+    "            id_detalle INT PRIMARY KEY,\n",
+    "            id_cliente INT REFERENCES dim_cliente(id_cliente),\n",
+    "            id_producto INT REFERENCES dim_producto(id_producto),\n",
+    "            id_tiempo INT REFERENCES dim_tiempo(id_tiempo),\n",
+    "            cantidad INT,\n",
+    "            precio_unitario NUMERIC(10, 2),\n",
+    "            subtotal NUMERIC(10, 2)\n",
+    "        );\n",
+    "    '''))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1fdf106-5787-406a-bf7f-27f496e75348",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
