actualizacion de la ruta el init.sql

--- a/notebooks/Ejercicio 1.ipynb
+++ b/notebooks/Ejercicio 1.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "**NOTA IMPORTANTE:**\n",
     "\n",
-    "Todo lo que esta realizado aqui, se ejecuta automaticamente cuando se levanta el contenedor, ya que todo esto esta en el archivo **init.sql**"
+    "Todo lo que esta realizado aqui, se ejecuta automaticamente cuando se levanta el contenedor, ya que todo esto esta en el archivo **.devcontainer/init.sql**"
    ]
   },
   {
